--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Jonathan's Portfolio</title>
 
         <link href="styles.css" rel="stylesheet">
+        <script defer src="index.js"></script>
     </head>
     <body>
         <div class="header">
@@ -37,6 +38,12 @@
                         <a href="https://github.com/jmalexan">GitHub</a>
                     </li>
                 </ul>    
+            </div>
+
+            <button onclick="buttonClicked(this)">Click me!</button>
+
+            <div id="disappear">
+                The magical disappearing div
             </div>
     
         </div>
