Rest of work for Winter 2020

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             <p>
                 here's <em>my</em> <strong>cool</strong> accomplishments
             </p>
-            <ul class="accomplishments-list">
-                <li>
+            <div class="accomplishments-list">
+                <p class="accomplishments-list-items">
                     Made a cool destiny website
-                </li>
-                <li>
+                </p>
+                <p id="web-dev-item" class="accomplishments-list-items">
                     worked some cool web dev jobs
-                </li>
-                <li>
+                </p>
+                <p class="accomplishments-list-items">
                     run a cool club
-                </li>
-            </ul>
+                </p>
+            </div>
             <div class="projects">
                 <h2>
                     Projects
@@ -40,7 +40,7 @@
                 </ul>    
             </div>
 
-            <button onclick="buttonClicked(this)">Click me!</button>
+            <button id="count" onclick="buttonClicked(this)">Click me!</button>
 
             <div id="disappear">
                 The magical disappearing div
